Styling - class cleaninga

--- a/CarDealer/CarDealer/Views/Car/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Edit.cshtml
@@ -31,82 +31,82 @@
 
         @Html.HiddenFor(model => model.Id)
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Brand)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Brand)
             @Html.ValidationMessageFor(model => model.Brand)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Model)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Model)
             @Html.ValidationMessageFor(model => model.Model)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Year)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Year)
             @Html.ValidationMessageFor(model => model.Year)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.ManufactureDate)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.ManufactureDate)
             @Html.ValidationMessageFor(model => model.ManufactureDate)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.State)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.State)
             @Html.ValidationMessageFor(model => model.State)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Description)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Description)
             @Html.ValidationMessageFor(model => model.Description)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Color)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Color)
             @Html.ValidationMessageFor(model => model.Color)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.CarNumber)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.CarNumber)
             @Html.ValidationMessageFor(model => model.CarNumber)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.CarDealerId)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.CarDealerId)
             @Html.ValidationMessageFor(model => model.CarDealerId)
         </div>
         
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.CarDealerName)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.CarDealerName)
             @Html.ValidationMessageFor(model => model.CarDealerName)
         </div>
