--- a/CarDealer/CarDealer/Views/Car/ListDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/Car/ListDataContainer.cshtml
@@ -3,26 +3,26 @@
 <h2>Cars</h2>
 <table>
     <tr>
-        <th>
+        <th style="width: 50px;">
             @Html.DisplayNameFor(model => model.Brand)
         </th>
-        <th>
+        <th style="width: 50px;">
             @Html.DisplayNameFor(model => model.Model)
         </th>
-        <th>
+        <th style="width: 50px;">
             @Html.DisplayNameFor(model => model.Year)
         </th>
-        <th>
+        <th style="width: 55px;">
             @Html.DisplayNameFor(model => model.State)
         </th>
-        <th>
+        <th style="width: 60px;">
             @Html.DisplayNameFor(model => model.Color)
         </th>
-        <th>
+        <th style="width: 80px;">
             @Html.DisplayNameFor(model => model.CarNumber)
         </th>
 
-        <th>
+        <th style="width: 150px;">
             @Html.DisplayNameFor(model => model.CarDealerName)
         </th>
         <th></th>
