--- a/CarDealer/CarDealer/Views/Car/SingleDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/Car/SingleDataContainer.cshtml
@@ -3,66 +3,66 @@
 <fieldset>
     <legend>Car</legend>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.Brand)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.Brand)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.Model)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.Model)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.Year)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.Year)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.ManufactureDate)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.ManufactureDate)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.State)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.State)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.Description)
     </div>
-    <div class="display-field">
+    <div class="label-text crop" style="width: 400px">
         @Html.DisplayFor(model => model.Description)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.Color)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.Color)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.CarNumber)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.CarNumber)
     </div>
 
-    <div class="display-label">
+    <div class="label-title">
         @Html.DisplayNameFor(model => model.CarDealerId)
     </div>
-    <div class="display-field">
+    <div class="label-text">
         @Html.DisplayFor(model => model.CarDealerId)
     </div>
 </fieldset>
