--- a/CarDealer/CarDealer/Views/CarDealer/SingleDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/SingleDataContainer.cshtml
@@ -3,52 +3,67 @@
 <fieldset>
     <legend>CarDealer</legend>
 
-    <div class="display-label">
+    <div>
         <b>@Html.DisplayNameFor(model => model.Name)</b>
     </div>
-    <div class="display-field">
+    <div >
         @Html.DisplayFor(model => model.Name)
     </div>
 
-    <div class="display-label">
+    <div>
         <b>@Html.DisplayNameFor(model => model.ParkingPlaces)</b>
     </div>
-    <div class="display-field">
+    <div >
         @Html.DisplayFor(model => model.ParkingPlaces)
     </div>
     
-    <div class="display-label">
+    <div>
+        <b>@Html.DisplayNameFor(model => model.Telephone)</b>
+    </div>
+    <div >
+        @Html.DisplayFor(model => model.Telephone)
+    </div>
+    
+    <div>
+        <b>@Html.DisplayNameFor(model => model.Email)</b>
+    </div>
+    <div >
+        @Html.DisplayFor(model => model.Email)
+    </div>
+
+    
+    <div>
         <b>@Html.DisplayNameFor(model => model.Country)</b>
     </div>
-    <div class="display-field">
+    <div >
         @Html.DisplayFor(model => model.Country)
     </div>
     
-    <div class="display-label">
+    <div>
         <b>@Html.DisplayNameFor(model => model.City)</b>
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.City)
     </div>
     
-    <div class="display-label">
+    <div>
         <b>@Html.DisplayNameFor(model => model.ZipCode)</b>
     </div>
-    <div class="display-field">
+    <div >
         @Html.DisplayFor(model => model.ZipCode)
     </div>
     
-    <div class="display-label">
+    <div>
         <b>@Html.DisplayNameFor(model => model.Street)</b>
     </div>
-    <div class="display-field">
+    <div >
         @Html.DisplayFor(model => model.Street)
     </div>
     
-        <div class="display-label">
+        <div>
         <b>@Html.DisplayNameFor(model => model.StreetNumber)</b>
     </div>
-    <div class="display-field">
+    <div >
         @Html.DisplayFor(model => model.StreetNumber)
     </div>
 </fieldset>
