--- a/CarDealer/CarDealer/Views/Home/Index.cshtml
+++ b/CarDealer/CarDealer/Views/Home/Index.cshtml
@@ -4,24 +4,22 @@
 }
 
 <div>
-    <h1>Home - Index</h1>
-
     @*@using (Html.BeginForm("Login", "Login"))
     {
         <fieldset class="right">
             <legend>Login</legend>
 
-            <div class="editor-label">
+            <div>
                 <span>Username</span>
             </div>
-            <div class="editor-field">
+            <div>
                 <input type="text" name="username" />
             </div>
 
-            <div class="editor-label">
+            <div>
                 <span>Password</span>
             </div>
-            <div class="editor-field">
+            <div>
                 <input type="password" name="password" />
             </div>
 
