--- a/CarDealer/CarDealer/Views/Person/Delete.cshtml
+++ b/CarDealer/CarDealer/Views/Person/Delete.cshtml
@@ -8,52 +8,52 @@
 <fieldset>
     <legend>Person</legend>
 
-    <div class="display-label">
+    <div>
         @Html.DisplayNameFor(model => model.IDCardNumber)
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.IDCardNumber)
     </div>
 
-    <div class="display-label">
+    <div>
         @Html.DisplayNameFor(model => model.Name)
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.Name)
     </div>
 
-    <div class="display-label">
+    <div>
         @Html.DisplayNameFor(model => model.DateOfBirth)
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.DateOfBirth)
     </div>
 
-    <div class="display-label">
+    <div>
         @Html.DisplayNameFor(model => model.MotherName)
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.MotherName)
     </div>
 
-    <div class="display-label">
+    <div>
         @Html.DisplayNameFor(model => model.AddressID)
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.AddressID)
     </div>
 
-    <div class="display-label">
+    <div>
         @Html.DisplayNameFor(model => model.Telephone)
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.Telephone)
     </div>
 
-    <div class="display-label">
+    <div>
         @Html.DisplayNameFor(model => model.Email)
     </div>
-    <div class="display-field">
+    <div>
         @Html.DisplayFor(model => model.Email)
     </div>
 </fieldset>
