--- a/CarDealer/CarDealer/Views/Person/Edit.cshtml
+++ b/CarDealer/CarDealer/Views/Person/Edit.cshtml
@@ -22,58 +22,58 @@
 
         @Html.HiddenFor(model => model.Id)
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.IDCardNumber)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.IDCardNumber)
             @Html.ValidationMessageFor(model => model.IDCardNumber)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Name)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Name)
             @Html.ValidationMessageFor(model => model.Name)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.DateOfBirth)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.DateOfBirth)
             @Html.ValidationMessageFor(model => model.DateOfBirth)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.MotherName)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.MotherName)
             @Html.ValidationMessageFor(model => model.MotherName)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.AddressID)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.AddressID)
             @Html.ValidationMessageFor(model => model.AddressID)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Telephone)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Telephone)
             @Html.ValidationMessageFor(model => model.Telephone)
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.LabelFor(model => model.Email)
         </div>
-        <div class="editor-field">
+        <div>
             @Html.EditorFor(model => model.Email)
             @Html.ValidationMessageFor(model => model.Email)
         </div>
