--- a/CarDealer/CarDealer/Views/Person/Search.cshtml
+++ b/CarDealer/CarDealer/Views/Person/Search.cshtml
@@ -9,17 +9,17 @@
         <br />
         <legend>Car dealer</legend>
 
-        <div class="editor-label">
+        <div>
             @Html.Label("Name")
             <input type="text" name="Name" />
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.Label("Address Id")
             <input type="text" name="AddressId" />
         </div>
 
-        <div class="editor-label">
+        <div>
             @Html.Label("Parking places")
             <input type="number" name="ParkingPlaces" />
         </div>
