--- a/CarDealer/CarDealer/Content/Styles/Site.css
+++ b/CarDealer/CarDealer/Content/Styles/Site.css
@@ -7,12 +7,35 @@ body {
     background: #404347 url("/Content/Images/bg.gif") repeat-x;
     font-family: Verdana, Arial, Helvetica, sans-serif;
     font-size: 12px;
-    color: #f7f7f7;
+    color: #fff8dc;
 }
 
 a {
-    color: #60C3DB;
+    color: #3cb371;
     text-decoration: none;
+}
+
+select {
+    width: 100%;
+}
+
+th {
+    text-decoration: underline;
+    font-size: 12px;
+    padding: 1px 1px 1px 1px;
+}
+
+fieldset {
+    box-shadow: 2px 2px darkgray;
+}
+
+
+legend {
+    color: mediumspringgreen;
+    font-family: Verdana;
+    margin-left: 5px;
+    font-weight: bold;
+    font-size: 20px;
 }
 
     a:hover {
@@ -20,7 +43,7 @@ a {
     }
 
 .wrap {
-    width: 980px;
+    width: 1080px;
     margin: 0 auto;
 }
 
@@ -52,14 +75,20 @@ a {
     }
 
 .menu {
-    margin: 60px 0 0 0;
+    margin: 60px 0 30px 0;
+    text-align: center;
+}
+
+.menuItem {
+    font-size: 30px;
+    margin: 0 20px 0 0;
 }
 
 .content {
-    width: 550px;
+    width: 667px;
     float: left;
     padding: 0 20px 20px 20px;
-    border-left: 1px dotted #aaa;
+    border-left: 1px dotted #B0FFBD;
     text-align: justify;
 }
 
@@ -68,7 +97,7 @@ a {
         font-size: 16px;
         font-weight: 100;
         padding: 10px 0 5px 0;
-        border-bottom: 1px dotted #aaa;
+        border-bottom: 1px dotted #B0FFBD;
         margin-bottom: 10px;
     }
 
@@ -88,7 +117,7 @@ a {
 }
 
     .leftmenu h2 {
-        border-bottom: 1px dotted #aaa;
+        border-bottom: 1px dotted #B0FFBD;
         padding: 10px 0 5px 0;
         margin-bottom: 10px;
         color: #B0FFBD;
@@ -105,11 +134,11 @@ a {
     float: right;
     width: 150px;
     padding: 0 20px 20px 20px;
-    border-left: 1px dotted #aaa;
+    border-left: 1px dotted #B0FFBD;
 }
 
-.rightmen.rightmenu h2 {
-    border-bottom: 1px dotted #aaa;
+.rightmenu.rightmenu h2 {
+    border-bottom: 1px dotted #B0FFBD;
     padding: 10px 0 5px 0;
     margin-bottom: 10px;
     color: #B0FFBD;
@@ -129,11 +158,13 @@ a {
 }
 
 .footer {
+    background: url("/Content/Images/footer.png") no-repeat;
+    height: 70px;
+
     margin-top: 20px;
-    border-top: 1px dotted #aaa;
+    border-top: 1px dotted #B0FFBD;
     font-size: 11px;
     text-align: center;
-    padding: 10px 0 10px 0;
 }
 
 .left {
@@ -161,6 +192,21 @@ a {
 
 .textSet {
     margin: 10px 3px 10px;
+}
+
+.label-title {
+    font-weight: bold;
+    margin: 10px 3px 0 3px;
+}
+
+.label-string-title {
+    font-weight: bold;
+    text-align: center;
+    font-size: 20px;
+}
+
+.label-text {
+    margin: 0 0 0 6px;
 }
 
 .crop {
