--- a/CarDealer/CarDealer/Views/Car/Create.cshtml
+++ b/CarDealer/CarDealer/Views/Car/Create.cshtml
@@ -6,45 +6,56 @@
 
 <script type="text/javascript">
     $(document).ready(function () {
+
         $("#DDCarDealerName").on("change", function () {
-            $("#CarDealerId").val($(this).find('option:selected').val());
-            $("#CarDealerName").val($(this).find('option:selected').text());
+            setDealerProps();
         });
 
-        $("#ManufactureDate").val("2013-01-01");
-        $("#Year").val("2013");
+        setDefaultDateVaules();
+        
         $("#ManufactureDate").datepicker({ dateFormat: 'yy-mm-dd', showAnim: "fadeIn", changeYear: true, yearRange: '-40:+0', maxDate: '+0d' });
         $("#Year").datepicker({ dateFormat: 'yy', showAnim: "fadeIn", changeYear: true, maxDate: '+0d' });
     });
+    
+    function setDefaultDateVaules() {
+        $("#ManufactureDate").val("2013-01-01");
+        $("#Year").val("2013");
+    }
+
+    function setDealerProps() {
+        $("#CreateForm").find("#CarDealerId").val($("#DDCarDealerName").find('option:selected').val());
+        $("#CreateForm").find("#CarDealerName").val($("#DDCarDealerName").find('option:selected').text());
+    }
+
 </script>
 
 
 <div>
-    <h3>Create new</h3>
+    <h2>Create new</h2>
     <br />
     @using (Html.BeginForm("Create", "Car", FormMethod.Post, new { id = "CreateForm" }))
     { 
         @Html.ValidationSummary(true)
         <fieldset>
-            <legend>Car</legend>
+            <legend></legend>
             <div>
                 <br />
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.Brand)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.Brand)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.Brand)</span>
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.Model)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.Model)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.Model)</span>
                     </div>
@@ -55,79 +66,79 @@
 
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.CarDealerName)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.DropDownList("DDCarDealerName", TempData["CarDealersData"] as SelectList)
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.CarNumber)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.CarNumber)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.CarNumber)</span>
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.Color)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.Color)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.Color)</span>
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.ManufactureDate)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.ManufactureDate)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.ManufactureDate)</span>
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.Year)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.Year)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.Year)</span>
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.Owners)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.Owners)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.Owners)</span>
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.State)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.State)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.State)</span>
                     </div>
                 </div>
 
                 <div class="textSet">
-                    <div class="editor-label">
+                    <div>
                         @Html.LabelFor(model => model.Description)
                     </div>
-                    <div class="editor-field">
+                    <div>
                         @Html.EditorFor(model => model.Description)
                         <span class="errorMessage">@Html.ValidationMessageFor(model => model.Description)</span>
                     </div>
