--- a/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
+++ b/CarDealer/CarDealer/Views/CarDealer/ListDataContainer.cshtml
@@ -36,15 +36,19 @@
 <h2>Car dealers</h2>
 <table id="CarDealersTable" class="left">
     <tr>
-        <th>
+        <th style="width: 150px;">
             @Html.DisplayNameFor(model => model.Name)
         </th>
-        <th>
+        <th style="width: 110px;">
             @Html.DisplayNameFor(model => model.ParkingPlaces)
         </th>
-        <th>
+        <th style="width: 120px;">
+            @Html.DisplayNameFor(model => model.Telephone)
+        </th>
+        <th style="width: 130px;">
             @Html.DisplayNameFor(model => model.City)
         </th>
+        
         <th></th>
     </tr>
 
@@ -52,13 +56,16 @@
     @foreach (var item in Model)
     {
         <tr>
-            <td class="crop" style="width: 150px; margin-right: 3px">
+            <td class="crop" >
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td class="crop" style="width: 100px; margin-right: 3px">
+            <td class="crop" >
                 @Html.DisplayFor(modelItem => item.ParkingPlaces)
             </td>
-            <td class="crop" style="width: 150px; margin-right: 3px">
+            <td class="crop" >
+                @Html.DisplayFor(modelItem => item.Telephone)
+            </td>
+            <td class="crop" >
                 @Html.DisplayFor(modelItem => item.City)
             </td>
 
